use homepage for deploy in github, and change browserrouter basename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://yourusername.github.io/repository-name",
+  "homepage": "https://juanc-jc.github.io/AppRickAndMorty-ReactJs",
   "name": "rick-and-morty",
   "version": "0.1.0",
   "private": true,
